# attiny85_rust_blinky

./: Cargo.toml  Readme.md  avr-unknown-gnu-attiny85.json  blink.hex  build.sh  flash.sh  rust-toolchain.toml
src/: board.rs  led.rs  main.rs  sleep.rs
