[package]
name = "blink"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = '2018'

[dependencies]
vcell = "0.1.3"

[dependencies.avr-device]
version = "0.3.4"
features = ["attiny85", "avr-device-macros", "rt"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
